# ai-engineering-hub

./: .gitignore  .releaserc.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TODO_LIST.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.claude/: review-routes.json
.claude/agents/: analytics-engine-expert.md  contracts-architect.md  design-system-steward.md  ingestion-source-expert.md  performance-profiler.md  project-steward.md  rust-backend-architect.md  streamdeck-plugin-expert.md  tanstack-frontend-expert.md  tauri-security-reviewer.md  testing-reviewer.md
.claude/commands/: add-endpoint.md  add-metric.md  add-monitor.md  add-route.md  add-source.md  db-migrate.md  fix-bug.md  implement-feature.md  refactor-module.md  review-analytics.md  review-backend.md  review-contracts.md  review-design.md  review-frontend.md  review-ingestion.md  review-performance.md  review-security.md  review-streamdeck.md  update-docs.md  update-graph.md
.claude/hooks/: lessons.mjs  review-gate.mjs  style-policy.mjs
.claude/skills/analytics-standards/: SKILL.md
.claude/skills/backend-standards/: SKILL.md
.claude/skills/contracts-parity/: SKILL.md
.claude/skills/design-system/: SKILL.md
.claude/skills/frontend-standards/: SKILL.md
.claude/skills/graphify/: SKILL.md
.claude/skills/ingestion-standards/: SKILL.md
.claude/skills/lessons/: SKILL.md
.claude/skills/performance-checklist/: SKILL.md
.claude/skills/review-workflow/: SKILL.md
.claude/skills/security-checklist/: SKILL.md
.claude/skills/streamdeck-standards/: SKILL.md
.claude/skills/token-efficiency/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-landing.yml  release.yml
Casks/: ai-engineering-hub.rb
apps/ai-engineering-hub/: package.json  vite.config.ts
apps/ai-engineering-hub/core/: Cargo.toml
apps/ai-engineering-hub/core/examples/: serve.rs  smoke.rs
apps/ai-engineering-hub/core/src/: analytics.rs  db.rs  error.rs  intelligence.rs  lib.rs  models.rs  server.rs  sources.rs  state.rs
apps/ai-engineering-hub/core/src/ingestion/: adapter.rs  mod.rs  watcher.rs
apps/ai-engineering-hub/core/src/ingestion/collectors/: claude_code.rs  cline.rs  gemini.rs  mod.rs  opencode.rs  rtk.rs
apps/ai-engineering-hub/docs/: README.md
apps/ai-engineering-hub/src/: App.tsx  main.tsx
apps/ai-engineering-hub/src-tauri/: Cargo.toml  tauri.conf.json
apps/ai-engineering-hub/src-tauri/capabilities/: default.json
apps/ai-engineering-hub/src-tauri/migrations/: 20240608_create_schema.sql
apps/ai-engineering-hub/src-tauri/src/: api_tests.rs  collector.rs  db.rs  main.rs  repository.rs  repository_tests.rs  ws.rs
apps/ai-engineering-hub/src/backend/: Cargo.toml  tauri.conf.json
apps/ai-engineering-hub/src/backend/migrations/: 20240101000001_create_repositories.sql  20240101000002_create_sessions.sql  20240101000003_create_agents.sql  20240101000004_create_tasks.sql  20240101000005_create_metrics.sql  20240101000006_create_activity_events.sql  20240901_create_metrics_table.sql
apps/ai-engineering-hub/src/backend/src/: collector.rs  db.rs  lib.rs  main.rs  mod.rs  models.rs  repository.rs  routes.rs  ws.rs
apps/ai-engineering-hub/src/backend/src/routes/: analytics.rs  analytics_savings.rs  api.rs  mod.rs  ws.rs
apps/ai-engineering-hub/src/backend/src/service/: analytics.rs  metrics.rs  mod.rs
apps/ai-engineering-hub/src/backend/tests/: integration_test.rs
apps/ai-engineering-hub/src/frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
apps/ai-engineering-hub/src/frontend/src/: App.tsx  api.ts  index.tsx  main.tsx  routes.ts  styles.css
apps/ai-engineering-hub/src/frontend/src/__tests__/: repositories.test.tsx
apps/ai-engineering-hub/src/frontend/src/api/: client.ts  hooks.ts  index.ts
apps/ai-engineering-hub/src/frontend/src/components/: ActivityFeed.tsx  Breadcrumbs.tsx  ChangelogModal.tsx  CommandPalette.tsx  CopyButton.tsx  DataTable.tsx  ErrorBoundary.tsx  TimelineView.tsx  UpdateBanner.tsx
apps/ai-engineering-hub/src/frontend/src/lib/: autostart.ts  clipboard.ts  export.ts  format.ts  hub.ts  notify.ts  queries.ts  queryClient.ts  settings.ts  shell.ts  shortcuts.ts  store.ts  theme.ts  (+2 more)
apps/ai-engineering-hub/streamdeck-plugin/: tauri.conf.json
apps/ai-engineering-hub/streamdeck-plugin/src/: main.rs  main.tsx
apps/ai-engineering-hub/streamdeck-plugin/src/components/: TokenMonitor.tsx
apps/ai-engineering-hub/streamdeck-plugin/src/hooks/: useMetricUpdates.ts
apps/streamdeck-plugin/: .gitignore  build.sh  package.json  tsconfig.json  tsup.config.ts
apps/streamdeck-plugin/com.aiengineering.monitor.sdPlugin/: manifest.json
apps/streamdeck-plugin/src/: AgentMonitor.tsx  BuildHealthMonitor.tsx  InterventionMonitor.tsx  ProductivityMonitor.tsx  RetrievalMonitor.tsx  SavingsMonitor.tsx  TaskMonitor.tsx  TokenMonitor.tsx  actions.ts  hub.ts  index.css  index.tsx  plugin.ts
apps/streamdeck-plugin/src-tauri/: tauri.conf.json
apps/streamdeck-plugin/src/hooks/: useMetricUpdates.ts
benchmark/: list_performance.ts  startup.sh
design/: DESIGN-apple.md  api_contracts.md  component_architecture.md  database_schema.md  domain_model.md  event_contracts.md  information_architecture.md  stream_deck_architecture.md  ux_flows.md
docs/: API_REFERENCE.md  CONTRIBUTING.md  README.md  analytics.md  api.md  architecture.md  configuration.md  database.md  deployment.md  design-system.md  getting-started.md  integrations.md  releasing.md  streamdeck.md  troubleshooting.md
docs/guides/: adding-a-metric.md  adding-a-monitor.md  adding-a-route.md  adding-a-source.md  adding-an-endpoint.md
landing/: index.html
scripts/: make-update-manifest.mjs  set-version.mjs  update-homebrew-cask.mjs
src-tauri/: tauri.conf.json
src-tauri/migrations/: 2024_01_create_tables.sql
src-tauri/src/: database.rs  main.rs
src-tauri/tests/: integration_test.rs
(+55 files in other folders)
