# Rust workspace for AI Engineering Hub.
# Members: the single Tauri app (hosts the Axum server) + shared TS/Rust contract crates.
[workspace]
resolver = "2"
members = [
    "apps/ai-engineering-hub/core",
    "apps/ai-engineering-hub/src-tauri",
    "packages/shared-types",
    "packages/shared-events",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
shared-types = { path = "packages/shared-types" }
shared-events = { path = "packages/shared-events" }
