[package]
name = "ai-engineering-hub-tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.0.0", features = ["api-all"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.38", features = ["full"] }
axum = "0.7"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tauri-build = "2.0.0"