[package]
name = "ai-engineering-hub-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AI Engineering Hub desktop shell (Tauri v2) that hosts the Hub API/WS server."

[[bin]]
name = "ai-engineering-hub"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aeh-core = { path = "../core" }
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
# Used by `tauri build` for embedding production assets.
custom-protocol = ["tauri/custom-protocol"]
