[package]
name = "ai_engineering_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
tokio-stream = "0.1"
notify = "6.1"
futures = "0.3"

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
uuid = { version = "1.0", features = ["v4"] }
